# python-boilerplate

./: .coveragerc  .editorconfig  .env  .flake8  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  Dockerfile  Makefile  Pipfile  README.md  __rename__  __rename__.sh  make  pyproject.toml  rename_template.sh  setup.cfg  setup.py  tox.ini
.github/workflows/: main.yml
acme/: __init__.py  __version__.py  api.py  api_handler.py  api_routes.py  state.py  utils.py
data/: data_file
docker/: nginx.conf  run.sh  uwsgi.ini
my_module/: __init__.py  __main__.py  utils.py  wsgi.py
my_module/static_content/: style.css
src/my_module/: __main__.py
tests/: __init__.py  run_api_request.py  test_api_handler.py  test_code.py  test_utils.py
