[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "my_module"
version = "0.4.1"
description = "A best-practices template project for Python modules"
license = "Apache 2.0"
authors = ["Basti Tee <basti.tee@icloud.com>"]
maintainers = ["Basti Tee <basti.tee@icloud.com>"]
homepage = "https://github.com/BastiTee/python-boilerplate"
repository = "https://github.com/BastiTee/python-boilerplate"
readme = "README.md"
keywords = ["python", "template"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Natural Language :: English",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13"
]

[tool.poetry.dependencies]
# Python version: https://www.python.org/downloads/
python = ">=3.9,<3.14"

[tool.poetry.group.dev.dependencies]
autopep8 = "^2"
flake8 = "^7"
flake8-quotes = "^3"
flake8-docstrings = "^1"
flake8-builtins = "^3"
flake8-blind-except = "^0"
flake8-use-fstring = "^1"
flake8-isort = "^6"
pep8-naming = "^0"
isort = "^6"
pytest = "^8"
mypy = "^1"
typing-extensions = "^4"
black = "^25"
pipdeptree = "^2"

[tool.poetry.scripts]
my_module_cli = 'my_module.__main__:main'

[tool.mypy]
# Untyped definitions and calls
# Disallows defining functions without type annotations or with
# incomplete type annotations.
disallow_untyped_defs = true
# Type-checks the interior of functions without type annotations
check_untyped_defs = true
# Import discovery
follow_imports = "normal"
ignore_missing_imports = true
# Warning configuration
warn_unused_ignores = true
warn_unreachable = true
# Error message config
# pretty = true

[tool.pytest]
addopts = "-p no:warnings"

[tool.black]
skip-string-normalization = true
