[build-system]
requires = ["uv_build"]
build-backend = "uv_build"

[project]
name = "my_module"
version = "0.6.0"
description = "A best-practices template project for Python modules"
license = "Apache-2.0"
readme = "README.md"
keywords = ["python", "template"]
homepage = "https://github.com/BastiTee/python-boilerplate"
repository = "https://github.com/BastiTee/python-boilerplate"
authors = [
  {name = "Basti Tee", email = "basti.tee@icloud.com"}
]
maintainers = [
  {name = "Basti Tee", email = "basti.tee@icloud.com"}
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Natural Language :: English",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13"
]
# Python version: https://www.python.org/downloads/
requires-python = ">=3.10,<3.14"
dependencies = []

[project.scripts]
my_module_cli = 'my_module.__main__:main'

[tool.uv.build-backend]
module-root = ""

[dependency-groups]
dev = [
    "mypy>=1",
    "pytest>=9.0.3",
    "ruff>=0.8",
    "typing-extensions>=4",
]

[tool.mypy]
# Untyped definitions and calls
# Disallows defining functions without type annotations or with
# incomplete type annotations.
disallow_untyped_defs = true
# Type-checks the interior of functions without type annotations
check_untyped_defs = true
# Import discovery
follow_imports = "normal"
ignore_missing_imports = true
# Warning configuration
warn_unused_ignores = true
warn_unreachable = true
# Error message config
# pretty = true

[tool.pytest]
addopts = [
  "-p",
  "no:warnings"
]

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "N",    # pep8-naming
    "BLE",  # flake8-blind-except
    "A",    # flake8-builtins
    "S",    # flake8-bandit (security)
]
ignore = [
    "E203",  # whitespace before colon (Black-compatible)
    "S101",  # allow assert in tests
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["S101"]  # allow assert in test files

[tool.ruff.format]
quote-style = "preserve"
