[metadata]
# https://wheel.readthedocs.io/en/stable/user_guide.html#including-license-files-in-the-generated-wheel-file
license_files = LICENSE.txt

[bdist_wheel]
# https://packaging.python.org/guides/distributing-packages-using-setuptools/#wheels
universal=0

[flake8]
# Q003 Change outer quotes to avoid escaping inner quotes
# W503 line break before binary operator (preferred way)
ignore = Q003,W503
# f-string enforcement configuration (see https://github.com/MichaelKim0407/flake8-use-fstring)
percent-greedy = 0
format-greedy = 2
