# -----------------------------------------------------------------------------
# BUILDING WHEELS
# -----------------------------------------------------------------------------

[metadata]
license_files = LICENSE.txt, README.md

[bdist_wheel]
universal = 1

# -----------------------------------------------------------------------------
# FORMATTING AND LINTING
# -----------------------------------------------------------------------------

[flake8]
# Q003 Change outer quotes to avoid escaping inner quotes
# W503 line break before binary operator (preferred way)
ignore = Q003,W503
# flake8-use-fstring
percent-greedy = 0
format-greedy = 2

[tool:isort]
sections = FUTURE,STDLIB,FIRSTPARTY,THIRDPARTY,LOCALFOLDER

# -----------------------------------------------------------------------------
# TEST CONFIGURATION
# -----------------------------------------------------------------------------

[tool:pytest]
addopts = -p no:warnings

[testenv]
deps = pytest
commands = python -m pytest tests

[tox:tox]
envlist = py37
